[package]
name = "nva"
version = "0.1.0"
authors = ["Arman Maurya <mauryaarman5@gmail.com>"]
edition = "2021"
description = "A fast CLI tool for listing directories"
license = "MIT"
repository = "https://github.com/armanmaurya/nva"

[dependencies]
walkdir = "2"
clap = { version = "4.5.40", features = ["derive"] }
colored = "3.0.0"
humansize = "2.1.3"
syntect = "5.2.0"


[package.metadata.deb]
maintainer = "Arman Maurya <mauryaarman5@gmail.com>"
section = "utils"
priority = "optional"
extended-description = "A fast CLI tool for listing directories"
assets = [
  ["target/release/nva", "usr/bin/nva", "755"]
]
